[project]
name = "blog-writing-agent"
version = "1.0.0"
description = "An AI blog writing studio that learns your voice with DigitalOcean Gradient AI and Memori."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [{ name = "Tirth Rank", email = "tirth1263@users.noreply.github.com" }]
keywords = ["ai", "blog-writing", "digitalocean", "memori", "streamlit", "writing-style"]
dependencies = [
  "streamlit>=1.42,<2",
  "openai>=1.60,<3",
  "pypdf>=5,<7",
  "python-docx>=1.1,<2",
  "python-dotenv>=1.0,<2",
  "memori>=3.3,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "ruff>=0.9,<1",
]

[project.urls]
Homepage = "https://tirth1263.github.io/blog-writing-agent/"
Repository = "https://github.com/tirth1263/blog-writing-agent"
Issues = "https://github.com/tirth1263/blog-writing-agent/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --basetemp=.pytest-tmp"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
